Correct constructor for TechnologyEntity in testcase